<resources>
    <string name="app_name">Personal Health Assistance</string>
    <string name="launch_logo">launch_logo</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">logo</string>
    <string name="logo_singup">Logo</string>
    <string name="textview">TextView</string>
    <string name="user_name_singup">User Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">Sign-Up</string>
    <string name="password_signup">Password</string>
    <string name="logo_main">logo main</string>
    <string name="health_button">health button</string>
    <string name="fitness_button">fitness button</string>
    <string name="fitness">fitness</string>
    <string name="health">health</string>
    <string name="your_collection">Your Collection</string>
    <string name="enter_to_your_collection">Enter to your collection</string>
    <string name="choose_health_and_fintness_program_to_add_to_your_collection">Choose Health and Fintness program to add to your collection</string>
    <string name="image">image</string>

</resources>