<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".LoginPage">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="57dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/userNameBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phaicon1" />

    <EditText
        android:id="@+id/userNameBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:autofillHints=""
        android:background="@drawable/custom_textbox"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:background="@drawable/custom_textbox"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/userNameBox"
        app:layout_constraintTop_toBottomOf="@+id/userNameBox" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="193dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/button"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="193dp"
        android:layout_height="0dp"
        android:layout_marginBottom="194dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>